# airplane_thing

./: .gitignore  .gitmodules  Makefile  README.md  compose.dev.yml  compose.expose-radio.yml  compose.yml  start.sh  stop.sh
aggregator/: Dockerfile  Dockerfile.dev  Dockerfile.tests  Makefile  compose.dev.yml  compose.yml  pyproject.toml
aggregator/src/aggregator/: __main__.py  api.py  correlator.py  decoder.py  ingester.py  log.py  mode_s_ingester.py  runnable.py  swim_ingester.py  util.py
aggregator/src/aggregator/decoder/: __init__.py  decoder.py  message.py  position.py  position_state.py
aggregator/src/aggregator/mode_s/: __init__.py  ingester.py  message.py  position_state.py
aggregator/src/aggregator/model/: __init__.py  aircraft.py  flight.py  icao_address.py  json.py  lifetimes.py  position.py
aggregator/tests/: run.sh  test_lifetimes.py
frontend/: Dockerfile  compose.dev.yml  compose.yml  entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: aggregator_client.ts  aircraft_layer.ts  declutter.ts  index.html  index.ts  main.css  stale_indicator.ts  util.ts
radio/: Dockerfile  compose.expose.yml  compose.yml  entrypoint.sh
replay/: main.py
